syntax = "proto3";

package chef.automate.api.iam.v2;
option go_package = "github.com/chef/automate/components/automate-gateway/api/iam/v2/request";

// Statement, Policy definitions
import "components/automate-gateway/api/iam/v2/common/policy.proto";

// Does not contain type as the enduser can only create 'custom' policies.
message CreatePolicyReq {
    // Unique ID for the new policy. Cannot be changed after creation.
    string id = 1;
    // Name for the new policy.
    string name = 2;
    // Members affected by this policy.
    repeated string members = 3;
    // Statements for the new policy. Must contain one or more.
    repeated Statement statements = 4;
    // The list of projects this policy belongs to.
    repeated string projects = 5;
}

message DeletePolicyReq {
    string id = 1;
}

message ListPoliciesReq {}

message AddPolicyMembersReq {
    // Unique ID for the policy to modify.
    string id = 1;
    // List of members to add to the policy.
    repeated string members = 2;
}

message GetPolicyReq {
    string id = 1;
}

// Does not contain type as the enduser can only create 'custom' policies.
message UpdatePolicyReq {
    // Unique ID for the policy to modify. Cannot be changed.
    string id = 1;
    // Members affected by this policy.
    repeated string members = 2;
    // Statements for the policy. Must contain one or more.
    repeated Statement statements = 3;
    // Name for this policy.
    string name = 8;
    // The list of projects this policy belongs to.
    repeated string projects = 9;
}

message UpgradeToV2Req {
    Flag flag = 1;
    bool skip_v1_policies = 2;
}

message GetPolicyVersionReq {}

message ResetToV1Req {}

message ListPolicyMembersReq {
    // Unique ID for the policy to list members of.
    string id = 1;
}

message ReplacePolicyMembersReq {
    // Unique ID for the policy to modify.
    string id = 1;
    // List of members that replaces previous policy member list.
    repeated string members = 2;
}

message RemovePolicyMembersReq {
    // Unique ID for the policy to modify.
    string id = 1;
    // List of members to remove from the policy.
    repeated string members = 2;
}

// Does not contain type as the enduser can only create 'custom' roles.
message CreateRoleReq {
    // Unique ID for the role. Cannot be changed after creation.
    string id = 1;
    // Name for the new role.
    string name = 2;
    // List of actions that this role scopes to.
    repeated string actions = 3;
    // The list of projects this role belongs to.
    repeated string projects = 4;
}

message GetRoleReq {
    string id = 1;
}

message DeleteRoleReq {
    string id = 1;
}

message UpdateRoleReq {
    // Unique ID for the role to update. Cannot be changed.
    string id = 1;
    // Name for the role.
    string name = 2;
    // List of actions that this role scopes to.
    repeated string actions = 3;
    // The list of projects this role belongs to.
    repeated string projects = 4;
}

message ListRolesReq {}

message GetProjectReq {
    string id = 1;
}

message ListProjectsReq {}

message CreateProjectReq {
    // Unique ID for the project. Cannot be changed after creation.
    string id = 1;
    // Name for the new project.
    string name = 2;
}

message UpdateProjectReq {
    // Unique ID for the project. Cannot be changed.
    string id = 1;
    // Name for the project.
    string name = 2;
}

message DeleteProjectReq {
    string id = 1;
}
